fixed spacing issue between grid items by changing grid-template-columns style

--- a/mystyles.css
+++ b/mystyles.css
@@ -49,7 +49,7 @@ table {
 
 #gridContainer{
 	display:grid;
-	grid-template-columns: repeat(16, 1fr);
+	grid-template-columns: repeat(16, 10px);
 
 }
 
